Documentation edits made through Mintlify web editor

--- a/concepts/programmable-voice.mdx
+++ b/concepts/programmable-voice.mdx
@@ -11,7 +11,7 @@ Programmable Voice in Fonoster allows you to control the flow of a phone call us
 
 ## Overview
 
-The following is an example of how to create a programmable voice application in Fonoster using the SDK:
+The following is an example of how to create an application in Fonoster using the SDK:
 
 ```javascript create-app.js {8}
 const SDK = require("@fonoster/sdk");
@@ -90,7 +90,7 @@ Here is a list of the available verbs in Fonoster:
 
 ## Speech settings
 
-Programmable voice applications support a variety of speech-to-text and text-to-speech vendors. The _speechToText_ and _textToSpeech_ objects allow you to define the speech-to-text and text-to-speech engines to use.
+Programmable Voice applications support a variety of speech-to-text and text-to-speech vendors. The _speechToText_ and _textToSpeech_ objects allow you to define the speech-to-text and text-to-speech engines to use.
 
 You can mix and match vendors to suit your needs. For example, you can use _Deepgram_ for speech-to-text and Google for text-to-speech. Please check the [Speech Vendors](./speech-vendors) section for more information on configuring speech-to-text and text-to-speech.
 
