--- a/concepts/speech-vendors.mdx
+++ b/concepts/speech-vendors.mdx
@@ -21,6 +21,7 @@ const client = new SDK.Client({ accessKeyId: "WO000000-0000-0000-0000-0000000000
 const appConfig = {
   name: "Custom Voice App",
   type: "EXTERNAL",
+  endpoint: "0.tcp.ngrok.io:17263",
   speechToText: {
     productRef: "stt.deepgram",
     config: {
