--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -11,7 +11,7 @@ import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
   The Autopilot is currently in overview mode and only available via the SDK, and the KnowledgeBase features have been disabled.
 </Warning>
 
-Fonoster's Autopilot is a component within the platform that allows you to create powerful conversational experiences. It is built on top of Fonoster [Programmable voice](./programmable-voice) and uses the latest advances in large language models (LLMs) to provide a natural and engaging experience.
+Fonoster's Autopilot is a component within the platform that allows you to create powerful conversational experiences. It is built on top of Fonoster [Programmable Voice](./programmable-voice) and uses the latest advances in large language models (LLMs) to provide a natural and engaging experience.
 
 ## Overview
 
