Documentation edits made through Mintlify web editor

--- a/concepts/programmable-voice.mdx
+++ b/concepts/programmable-voice.mdx
@@ -47,7 +47,7 @@ However, so far, we have only told Fonoster the speech configuration and the loc
 
 You also need to run a VoiceServer using your application's logic.
 
-## VoiceServer
+## The Voice Server
 
 The VoiceServer works similarly to an Express server. It accepts requests and returns responses. The _VoiceServer_ processes verbs and executes the desired actions.
 
