Documentation edits made through Mintlify web editor

--- a/guides/overwriting-speech-voices.mdx
+++ b/guides/overwriting-speech-voices.mdx
@@ -9,7 +9,7 @@ import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
 
 When creating a voice application, you will define the voice used to speak the text. To illustrate this, let's define a simple voice application using _Deepgram_ for speech-to-text using the SDK:
 
-```javascript index.js {10,13}
+```javascript index.js {10-13}
 const SDK = require("@fonoster/sdk");
 
 const client = new SDK.Client({ accessKeyId: "WO000000-0000-0000-0000-000000000000" });
