Documentation edits made through Mintlify web editor

--- a/concepts/programmable-voice.mdx
+++ b/concepts/programmable-voice.mdx
@@ -79,6 +79,7 @@ Here is a list of the available verbs in Fonoster:
 - `Say` - Takes a text, synthesizes the text into audio, and streams back the result
 - `Gather` - Waits for DTMF or speech events and returns back the result
 - `SGather` - Returns a stream for future DTMF and speech results
+- `Stream` - Creates a bidirectional stream to send and receive audio from a caller
 - `Dial` - Passes the call to an Agent or a Number at the PSTN
 - `Record` - It records the voice of the calling party and saves the audio on the Storage sub-system
 - `Mute` - It tells the channel to stop sending media, effectively muting the channel
