Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -154,9 +154,9 @@ The Autopilot supports multiple language model providers. The following is a lis
 | Groq     | Groq offers high-performance AI models optimized for speed | `llama-3.1-8b-instant`, `llama-3.3-70b-specdec`, `llama-3.3-70b-versatile` |
 | Ollama   | Self-hosted Ollama models                                  | `llama3-groq-tool-use`                                                     |
 
-<Warning>
-  We have noticed that Groq models, particularly `llama-3.3-70b-versatile`, often require greater prompting specificity for effective tool usage. We will share best practices to ensure more consistent behavior as we gain more insights
-</Warning>
+<Info>
+We have noticed that Groq models, particularly `llama-3.3-70b-versatile`, often require greater prompting specificity for effective tool usage. We will share best practices to ensure more consistent behavior as we gain more insights
+</Info>
 
 ### Knowledge bases
 
