--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -5,9 +5,9 @@ description: 'Voice applications powered by LLMs.'
 
 import WipDocsWarning from '/snippets/wip-docs-warning.mdx';
 
-<Warning>
+<Note>
   The Autopilot is currently in overview mode and only available via the SDK, and the KnowledgeBase features have been disabled.
-</Warning>
+</Note>
 
 Fonoster's Autopilot is a component within the platform that allows you to create powerful conversational experiences. It is built on top of Fonoster [Programmable Voice](./programmable-voice) and uses the latest advances in large language models (LLMs) to provide a natural and engaging experience.
 
