Documentation edits made through Mintlify web editor

--- a/concepts/calling.mdx
+++ b/concepts/calling.mdx
@@ -95,7 +95,8 @@ async function makeCall() {
     const { ref, statusStream } = await calls.createCall({
       from: "+18287854037",
       to: "+17853178070",
-      appRef: "4b01c9b1-8cb1-48fb-bd49-f3daf13463a9",    // Replace with your application reference
+      // Replace with your application reference
+      appRef: "4b01c9b1-8cb1-48fb-bd49-f3daf13463a9",
       timeout: 30
     });
 
