Documentation edits made through Mintlify web editor

--- a/concepts/identity-and-tokens.mdx
+++ b/concepts/identity-and-tokens.mdx
@@ -125,7 +125,7 @@ Fonoster Identity simplifies the renewal process for expired access tokens. User
 If your authentication strategy includes API keys, the module can also facilitate exchanging them for tokens.
 </Tip>
 
-## Refresh-Token Rotation Policy
+## Refresh-Token
 
 Fonoster Identity uses a time-based refresh token, which means a refresh token will expire after a fixed amount of time. The Identity service also provides a mechanism to invalidate existing refresh tokens to address scenarios like compromised devices or accounts.
 
