docs: update all examples to use a more realistic Workspace accessKeyId value

--- a/concepts/bidirectional-streams.mdx
+++ b/concepts/bidirectional-streams.mdx
@@ -15,7 +15,7 @@ A common use case for the Stream verb is real-time transcription. In such scenar
 
 Please see the highlighted lines for the most critical parts of the code.
 
-```javascript server.js {4,9,11-16,26}
+```javascript voice-server.js {4,9,11-16,26}
 const VoiceServer = require("@fonoster/voice").default;
 const { createClient, LiveTranscriptionEvents } = require("@deepgram/sdk");
 
