Documentation edits made through Mintlify web editor

--- a/concepts/programmable-voice.mdx
+++ b/concepts/programmable-voice.mdx
@@ -17,7 +17,7 @@ const client = new SDK.Client({ accessKeyId: "WO000000000000000000000000000000" 
 const appConfig = {
   name: "Custom Voice App",
   type: "EXTERNAL",
-  endpoint: "0.tcp.ngrok.io:17263",
+  endpoint: "welcome.demo.fonoster.local", // Demo application
   speechToText: {
     productRef: "stt.deepgram",
     config: {
