Documentation edits made through Mintlify web editor

--- a/concepts/calling.mdx
+++ b/concepts/calling.mdx
@@ -118,7 +118,7 @@ Then make the call:
 
 ```bash
 fonoster sipnet:calls:create \
-  --app-ref 4b01c9b1-8cb1-48fb-bd49-f3daf13463a9 \ # // Replace with your application reference
+  --app-ref 4b01c9b1-8cb1-48fb-bd49-f3daf13463a9 \ # Replace with your application reference
   --from +18287854037 \
   --to +17853178070
 ```
