Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -15,7 +15,7 @@ The following is an example of creating an Autopilot application using the SDK.
 
 First, add the following content to a file named `appConfig.yaml`:
 
-```yaml appConfig.yaml {2,12-31}
+```yaml appConfig.yaml {2,13,27}
 name: "Awesome Autopilot"
 type: "AUTOPILOT"
 speechToText:
@@ -65,7 +65,7 @@ client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
   .catch(console.error);
 ```
 
-Please note that you must install the _js-yaml_ and the _@fonsoter/sdk_ dependencies in your Node.JS project.
+Please note that you must install the `js-yaml` and the `@fonoster/sdk` dependencies in your Node.JS project.
 
 ## General configuration
 
