--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -67,6 +67,8 @@ client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
 
 Please note that you must install the `js-yaml` and the `@fonoster/sdk` dependencies in your Node.JS project.
 
+Once you create the application, you can use the _updateApplication_ instead of _createApplication_ to quickly iterate over your Autopilot.
+
 ## General configuration
 
 The Autopilot configuration is divided into a general section and three sub-sections: _speechToText_, _textToSpeech_, and _intelligence_.
