Documentation edits made through Mintlify web editor

--- a/concepts/autopilot.mdx
+++ b/concepts/autopilot.mdx
@@ -15,7 +15,7 @@ The following is an example of creating an Autopilot application using the SDK.
 
 First, add the following content to a file named `appConfig.yaml`:
 
-```yaml appConfig.yaml {2,13,27}
+```yaml appConfig.yaml {2,13,28}
 name: "Awesome Autopilot"
 type: "AUTOPILOT"
 speechToText:
@@ -67,7 +67,7 @@ client.loginWithApiKey("AP0eerv2g7qow3e950k7twu4rvydcunq3k", "fNc...")
 
 Please note that you must install the `js-yaml` and the `@fonoster/sdk` dependencies in your Node.JS project.
 
-Once you create the application, you can use the _updateApplication_ instead of _createApplication_ to quickly iterate over your Autopilot.
+Once you create the application, you can use the _updateApplication_ function instead of _createApplication_ to quickly iterate over your Autopilot.
 
 ## General configuration
 
