Documentation edits made through Mintlify web editor

--- a/guides/linking-any-virtual-number.mdx
+++ b/guides/linking-any-virtual-number.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Linking any virtual number'
-description: 'Description of your new file.'
+description: 'Accepting and sending calls from any SIP provider.'
 ---
 
 This guide provides step-by-step instructions for integrating your SIP provider with Fonoster. It covers creating SIP credentials, configuring trunks, and linking numbers. 
