Documentation edits made through Mintlify web editor

--- a/guides/linking-any-virtual-number.mdx
+++ b/guides/linking-any-virtual-number.mdx
@@ -3,7 +3,7 @@ title: 'Linking any virtual number'
 description: 'Accepting and sending calls from any SIP provider.'
 ---
 
-This guide provides step-by-step instructions for integrating your SIP provider with Fonoster. It covers creating SIP credentials, configuring trunks, and linking numbers. 
+This guide provides step-by-step instructions for connecting your SIP provider with Fonoster. It covers creating SIP credentials, configuring trunks, and linking numbers. 
 
 <Note>
 The preferred way to link a Twilio number is to use the `sipnet:numbers:linkTwilioNumber` command.
